--- a/vars.html
+++ b/vars.html
@@ -10,10 +10,10 @@
 		<div class="text-css">
 			<ul>
 				<li>
-					<img src="https://www.youtube.com/user/unboxtherapy" alt="Youtuber" />
+					<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
 					<h2>Unbox Therapy</h2>
-					<span>6.674.436 subscribers</span>
-					<span>892 videosc</span>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
 				</li>
 			</ul>
 		</div>
