--- a/vars.html
+++ b/vars.html
@@ -7,15 +7,63 @@
 	</head>	
 	
 	<body>
-		<div class="text-css">
-			<ul>
-				<li>
-					<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+		<ul>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
 					<h2>Unbox Therapy</h2>
 					<span>6.674.436 subs</span>
 					<span>892 videos</span>
-				</li>
-			</ul>
-		</div>
+				</div>
+			</li>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
+					<h2>Unbox Therapy</h2>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
+				</div>
+			</li>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
+					<h2>Unbox Therapy</h2>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
+				</div>
+			</li>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
+					<h2>Unbox Therapy</h2>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
+				</div>
+			</li>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
+					<h2>Unbox Therapy</h2>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
+				</div>
+			</li>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
+					<h2>Unbox Therapy</h2>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
+				</div>
+			</li>
+			<li>
+				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
+				<div class="text-container">
+					<h2>Unbox Therapy</h2>
+					<span>6.674.436 subs</span>
+					<span>892 videos</span>
+				</div>
+			</li>			
+		</ul>
 	</body>
 </html>
