--- a/vars.html
+++ b/vars.html
@@ -7,6 +7,8 @@
 	</head>	
 	
 	<body>
+		<h1>.KIT Variables</h1>
+	
 		<ul>
 			<li>
 				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
@@ -56,14 +58,6 @@
 					<span>892 videos</span>
 				</div>
 			</li>
-			<li>
-				<img src="https://yt3.ggpht.com/-a6zE2RN4RMc/AAAAAAAAAAI/AAAAAAAAAAA/uJt5jt9Fn34/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Youtuber" />
-				<div class="text-container">
-					<h2>Unbox Therapy</h2>
-					<span>6.674.436 subs</span>
-					<span>892 videos</span>
-				</div>
-			</li>			
 		</ul>
 	</body>
 </html>
